--- a/HTML program/comment.html
+++ b/HTML program/comment.html
@@ -6,7 +6,9 @@
     <title>Sonali Websites</title>
 </head>
 <body>
+    <!-- This heading will change in future -->
     <h5>This is paragraph</h5>
+    <!-- Improve below paragraph -->
     <p>
         This is paragraph
     </p>
