--- a/HTML program/LinkAttributes.html
+++ b/HTML program/LinkAttributes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="https://code with sonali" target="_main">
-        <img src="https://wallpaperaccess.com/full/1354073.jpg" alt="">
+        <img src="https://wallpaperaccess.com/full/1354073.jpg" alt="sonali website">
         sonali websites  </a>
 </body>
 </html>
