--- a/HTML program/hrTag.html
+++ b/HTML program/hrTag.html
@@ -6,27 +6,27 @@
     </title>
     <body>
         <h1>
-            H1 Heading
+            H1 Heading!
         </h1>
         <hr>
         <h2>
-            H2 Heading
+            H2 Heading!
         </h2>
         <hr>
         <h3>
-            H3 Heading
+            H3 Heading!
         </h3>
         <hr>
         <h4>
-            H4 Heading
+            H4 Heading!
         </h4>
         <hr>
         <h5>
-            H5 Heading
+            H5 Heading!
         </h5>
         <hr>
         <h6>
-            H6 Heading
+            H6 Heading!
         </h6>
         <hr>
     </body>
