--- a/HTML program/imgTag.html
+++ b/HTML program/imgTag.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <img src="https://images.unsplash.com/photo-1562170824-b547dae88b97?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9" alt="">
-</body>
+</body><p>
+    My Name is SOnali
+</p>
 </html>
