--- a/HTML program/Caption Tag.html
+++ b/HTML program/Caption Tag.html
@@ -12,7 +12,7 @@
             <caption>Max Score by Different players in Faug</caption>
             <tr>
                 <th>S.No</th>
-                <th>Player</th> 
+                <th>Players</th> 
                 <th>Max Score</th>
                 <th>Game</th>
             </tr>
