--- a/HTML program/subSup.html
+++ b/HTML program/subSup.html
@@ -10,7 +10,7 @@
         <sub>CO2</sub>
     </p>
     <p>
-        <sup>x + 2 + H + 2</sup>
+        <sup>x + 2 + H + 2</sup><p>My name is sona</p>
     </p>
 </body>
 </html>
