--- a/HTML program/paragraph.html
+++ b/HTML program/paragraph.html
@@ -9,6 +9,7 @@
     <body>
         
         <p>
+            <h1>Title</h1>
             Lorem ipsum dolor, <br> amet consectetur adipisicing elit. Omnis sit quod eaque ipsa aliquam excepturi magni recusandae. Recusandae, sequi consectetur architecto obcaecati excepturi blanditiis eveniet culpa, similique, iure id accusantium.
         </p>
 
